--- a/index.html
+++ b/index.html
@@ -3,18 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>SPRINT 2 - ENTORNOS</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-<link rel="stylesheet" href="./estilo.css">
 </head>
 
-<body>
-<article class="wrapper">
-  <h2 class="title"> <a href="https://youtu.be/cL_55yINQYs" style="text-decoration: none; color: white;">Repositorios Git</a> </h2>
-</article>
-
-<audio controls autoplay>
-  <source src="BackgroundMusic.mp3" type="audio/mp3">
-</audio>
+<body bgcolor="#AEC6CF">
+<h1 style="text-align: center";>Entornos desarrollo </h1>
+<h2 style="text-align: center"> <a href="https://youtu.be/cL_55yINQYs" style="text-decoration: none; color: white;">Repositorios Git</a> </h2>
+<h2 style="text-align: center"> <a href="https://youtu.be/cL_55yINQYs" style="text-decoration: none; color: white;">Herramientas Case</a> </h2>
 
 </body>
 </html>
