--- a/Index.html
+++ b/Index.html
@@ -13,11 +13,11 @@
 <h3 style="text-align: center">Eclipse IDE for Enterprise Java and Developers </h3>
 <p>Eclipse IDE for Enterprise Java and Developers,versión 2022-09</p>
 <img src="eclipse.png" width="50%" height="50%" bor-der="10%" text-align="center"/><br><br>
-<h2>Instalación de Java JDK</h2>
-<h3>Rubén Paradas Moreno</h3>
-<p>La Ruta donde se ha instalado es: Documentos/JDK/jdk-8u351-windows-x64</p>
-<img src="InsJDK.PNG" ancho =" 50% " altura =" 50% " bor-der =" 10% " text-align ="centro"/>
-<p>Variables de entorno JAVA configuradas en tu equipo</p>
-<img src="V.E.JDK.PNG" ancho =" 50% " altura =" 50% " bor-der =" 10% " text-align ="centro"/>
+<h2 style="text-align: center";>Instalación de Java JDK</h2>
+<h3 style="text-align: center";>Rubén Paradas Moreno</h3>
+<p style="text-align: center";>La Ruta donde se ha instalado es: Documentos/JDK/jdk-8u351-windows-x64</p>
+<img src="InsJDK.PNG" style="text-align: center" ancho =" 50% " altura =" 50% " bor-der =" 10% " text-align ="centro"/>
+<p style="text-align: center";>Variables de entorno JAVA configuradas en tu equipo</p>
+<img src="V.E.JDK.PNG" style="text-align: center" ancho =" 50% " altura =" 50% " bor-der =" 10% " text-align ="centro"/>
 </body>
 </html>
