--- a/Index.html
+++ b/Index.html
@@ -16,8 +16,8 @@
 <h2 style="text-align: center";>Instalación de Java JDK</h2>
 <h3 style="text-align: center";>Rubén Paradas Moreno</h3>
 <p style="text-align: center";>La Ruta donde se ha instalado es: Documentos/JDK/jdk-8u351-windows-x64</p>
-<img src="InsJDK.PNG" style="text-align: center" ancho =" 50% " altura =" 50% " bor-der =" 10% " text-align ="centro"/>
+<img src="InsJDK.PNG" ancho =" 50% " altura =" 50% " bor-der =" 10% " text-align ="centro"/>
 <p style="text-align: center";>Variables de entorno JAVA configuradas en tu equipo</p>
-<img src="V.E.JDK.PNG" style="text-align: center" ancho =" 50% " altura =" 50% " bor-der =" 10% " text-align ="centro"/>
+<img src="V.E.JDK.PNG" ancho =" 50% " altura =" 50% " bor-der =" 10% " text-align ="centro"/>
 </body>
 </html>
