--- a/Index.html
+++ b/Index.html
@@ -4,20 +4,19 @@
   <meta charset="UTF-8">
   <title>SPRINT 2 - ENTORNOS</title>
 </head>
+<div align="center">
+  <body style="background-color: #AEC6CF;">
+  <h1>Entornos desarrollo </h1>
+  <h2> <a href="https://youtu.be/cL_55yINQYs" style="text-decoration: none; color: white;">Repositorios Git</a> </h2>
+  <h2> <a href="https://youtu.be/ubhfbCkGEAg" style="text-decoration: none; color: white;">Herramientas Case</a> </h2>
+  <h2> <a href="https://youtu.be/cL_55yINQYs" style="text-decoration: none; color: white;">Instalación de entornos de desarrollo</a></h2>
+  <h3>Eclipse IDE for Enterprise Java and Developers </h3>
+  <p>Eclipse IDE for Enterprise Java and Developers,versión 2022-09</p>
+    <img src="eclipse.png" alt="descripcion" width="20%" height="20%" bor-der="10%"/> 
 
-<body bgcolor="#AEC6CF">
-<h1 style="text-align: center";>Entornos desarrollo </h1>
-<h2 style="text-align: center"> <a href="https://youtu.be/cL_55yINQYs" style="text-decoration: none; color: white;">Repositorios Git</a> </h2>
-<h2 style="text-align: center"> <a href="https://youtu.be/ubhfbCkGEAg" style="text-decoration: none; color: white;">Herramientas Case</a> </h2>
-<h2 style="text-align: center"> <a href="https://youtu.be/cL_55yINQYs" style="text-decoration: none; color: white;">Instalación de entornos de desarrollo</a></h2>
-<h3 style="text-align: center">Eclipse IDE for Enterprise Java and Developers </h3>
-<p>Eclipse IDE for Enterprise Java and Developers,versión 2022-09</p>
-<img src="eclipse.png" width="50%" height="50%" bor-der="10%" text-align="center"/><br><br>
-<h2 style="text-align: center";>Instalación de Java JDK</h2>
-<h3 style="text-align: center";>Rubén Paradas Moreno</h3>
-<p style="text-align: center";>La Ruta donde se ha instalado es: Documentos/JDK/jdk-8u351-windows-x64</p>
-<img src="InsJDK.PNG" ancho =" 50% " altura =" 50% " bor-der =" 10% " text-align ="centro"/>
-<p style="text-align: center";>Variables de entorno JAVA configuradas en tu equipo</p>
-<img src="V.E.JDK.PNG" ancho =" 50% " altura =" 50% " bor-der =" 10% " text-align ="centro"/>
+  <h2> Configuración de Entornos de Desarrollo </h2>
+  <h3>  <u> Jose Daniel López Cabello </u> </h3>
+  <p> <strong> PRETTIER </strong> - <strong> PACK EXTENSIONES JAVA </strong> - <strong> JAR BUILDER </strong> - <strong> SONARLINT </strong></p>
+</div>
 </body>
 </html>
