--- a/Index.html
+++ b/Index.html
@@ -7,16 +7,21 @@
 <div align="center">
   <body style="background-color: #AEC6CF;">
   <h1>Entornos desarrollo </h1>
-  <h2> <a href="https://youtu.be/cL_55yINQYs" style="text-decoration: none; color: white;">Repositorios Git</a> </h2>
-  <h2> <a href="https://youtu.be/ubhfbCkGEAg" style="text-decoration: none; color: white;">Herramientas Case</a> </h2>
-  <h2> <a href="https://youtu.be/cL_55yINQYs" style="text-decoration: none; color: white;">Instalación de entornos de desarrollo</a></h2>
+  <h2> <a href="https://youtu.be/cL_55yINQYs" style="text-decoration: none; color: white;">*Repositorios Git*</a> </h2>
+  <h2> <a href="https://youtu.be/ubhfbCkGEAg" style="text-decoration: none; color: white;">*Herramientas Case*</a> </h2>
+  <h2> <a href="https://youtu.be/cL_55yINQYs" style="text-decoration: none; color: white;">*Instalación de entornos de desarrollo*</a></h2>
   <h3>Eclipse IDE for Enterprise Java and Developers </h3>
   <p>Eclipse IDE for Enterprise Java and Developers,versión 2022-09</p>
     <img src="eclipse.png" alt="descripcion" width="20%" height="20%" bor-der="10%"/> 
 
   <h2> Configuración de Entornos de Desarrollo </h2>
-  <h3>  <u> Jose Daniel López Cabello </u> </h3>
   <p> <strong> PRETTIER </strong> - <strong> PACK EXTENSIONES JAVA </strong> - <strong> JAR BUILDER </strong> - <strong> SONARLINT </strong></p>
+  <h3>  <u> Jose Daniel López Cabello </u> </h3>
+  <img src="Extensiones1.png" alt="descripcion" width="20%" height="20%" bor-der="10%"/>
+  <h3>  <u> Iván Torres Romero </u> </h3>
+  <img src="Extensiones2.png" alt="descripcion" width="20%" height="20%" bor-der="10%"/> 
+  <h3>  <u> Ruben Castro Paradas </u> </h3>
+  <img src="Extensiones3.png" alt="descripcion" width="20%" height="20%" bor-der="10%"/>  
 </div>
 </body>
 </html>
