--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
   <title>SPRINT 2 - ENTORNOS</title>
 </head>
 <div align="center">
-  <body style="background-color: #AEC6CF;">
+  <body style="background: linear-gradient(135deg, hsl(36,100%,50%) 10%, hsl(72,100%,50%) 60%, white 90%);"></body>
   <h1>Entornos desarrollo </h1>
   <h2> <a href="https://youtu.be/cL_55yINQYs" style="text-decoration: none; color: white;">*Repositorios Git*</a> </h2>
   <h2> <a href="https://youtu.be/ubhfbCkGEAg" style="text-decoration: none; color: white;">*Herramientas Case*</a> </h2>
@@ -22,6 +22,9 @@
   <img src="Extensiones2.png" alt="descripcion" width="20%" height="20%" bor-der="10%"/> 
   <h3>  <u> Ruben Castro Paradas </u> </h3>
   <img src="Extensiones3.png" alt="descripcion" width="20%" height="20%" bor-der="10%"/>  
+
+  <h2> Creación y ejecución de proyectos JAVA </h2> 
+  <img src="image.png" alt="descripcion" width="20%" height="20%" bor-der="10%"/>
 </div>
 </body>
 </html>
